# go-mip

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Taskfile.yml  expected_output.txt  go.mod  go.sum  main.go  readme.md
bridge/: bridge.cpp  bridge.h
examples/: SDWAN_link_selection_problem.go  knapsack_problem.go  production_planning.go  transportation_problem.go
mip/: cgo_wrapper.go  constraint.go  expression.go  optimize.go  solver.go  variable.go
